--- a/public/404.html
+++ b/public/404.html
@@ -16,21 +16,21 @@
     <meta property="og:url" content="/404.html">
     <meta property="og:site_name" content="Wrappedelements framework">
     <title>404 Page not found :: Wrappedelements framework</title>
-    <base href="/">
+    <base href="/"> <link rel="icon" href="/images/favicon.png" type="image/png">
     <!-- https://github.com/filamentgroup/loadCSS/blob/master/README.md#how-to-use -->
-    <link href="/css/fontawesome-all.min.css?1711806238" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/css/fontawesome-all.min.css?1711806238" rel="stylesheet"></noscript>
-    <link href="/css/nucleus.css?1711806238" rel="stylesheet">
-    <link href="/css/auto-complete.css?1711806238" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/css/auto-complete.css?1711806238" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar.min.css?1711806238" rel="stylesheet">
-    <link href="/css/fonts.css?1711806238" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/css/fonts.css?1711806238" rel="stylesheet"></noscript>
-    <link href="/css/theme.css?1711806238" rel="stylesheet">
-    <link href="/css/theme-auto.css?1711806238" rel="stylesheet" id="R-variant-style">
-    <link href="/css/chroma-auto.css?1711806238" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="/css/variant.css?1711806238" rel="stylesheet">
-    <link href="/css/print.css?1711806238" rel="stylesheet" media="print">
-    <link href="/css/ie.css?1711806238" rel="stylesheet">
-    <script src="/js/url.js?1711806238"></script>
-    <script src="/js/variant.js?1711806238"></script>
+    <link href="/css/fontawesome-all.min.css?1711810876" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/css/fontawesome-all.min.css?1711810876" rel="stylesheet"></noscript>
+    <link href="/css/nucleus.css?1711810876" rel="stylesheet">
+    <link href="/css/auto-complete.css?1711810876" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/css/auto-complete.css?1711810876" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar.min.css?1711810876" rel="stylesheet">
+    <link href="/css/fonts.css?1711810876" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/css/fonts.css?1711810876" rel="stylesheet"></noscript>
+    <link href="/css/theme.css?1711810876" rel="stylesheet">
+    <link href="/css/theme-auto.css?1711810876" rel="stylesheet" id="R-variant-style">
+    <link href="/css/chroma-auto.css?1711810876" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="/css/variant.css?1711810876" rel="stylesheet">
+    <link href="/css/print.css?1711810876" rel="stylesheet" media="print">
+    <link href="/css/ie.css?1711810876" rel="stylesheet">
+    <script src="/js/url.js?1711810876"></script>
+    <script src="/js/variant.js?1711810876"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='.';
